--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!-- Splash screen -->
     <ImageView
         android:id="@+id/splash"
@@ -11,108 +12,115 @@
         android:padding="12dp"
         android:src="@drawable/splash"
         android:background="#ffffff"/>
+
     <!-- Main screen -->
     <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        android:background="#ffffff">
         <!-- ActionBar -->
-        <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="56dp"
-              android:orientation="horizontal"
-              android:animateLayoutChanges="true"
-              android:background="@color/staples_light">
-            <!-- close button (only visible when checkout displayed)-->
-            <TextView
-                android:id="@+id/close_button"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:gravity="center_vertical|left"
-                android:textSize="24sp"
-                android:fontFamily="sans-serif"
-                android:text="x"
-                android:clickable="true"
-                android:visibility="gone"/>
-            <ImageView
-                android:id="@+id/action_left_drawer"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|left"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:src="@drawable/ic_drawer"/>
-            <TextView
-                android:id="@+id/header"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:gravity="center_vertical|left"
-                android:textSize="24sp"
-                android:text="@string/staples"/>
-            <!-- Search Bar -->
-            <com.staples.mobile.cfa.search.SearchBarView
-                android:id="@+id/search_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxWidth="200dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:layout_gravity="center_vertical|right"
-                android:visibility="gone"
-                android:inputType="textAutoComplete|textAutoCorrect"
-                android:imeOptions="actionSearch|flagNoExtractUi"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:singleLine="true"
-                android:hint="@string/original_hint"
-                android:textSize="16sp"/>
-            <ImageView
-                android:id="@+id/search_icon"
-                android:layout_width="@dimen/icon_width"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|right"
-                android:src="@drawable/ic_search"/>
-            <!--cart item qty (only visible when cart displayed)-->
-            <TextView
-                android:id="@+id/cart_item_qty"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:gravity="center_vertical|right"
-                android:layout_marginRight="6dp"
-                android:textSize="20sp"
-                android:visibility="gone"/>
-            <!--checkout sign-in button (only visible when guest checkout displayed)-->
-            <Button
-                android:id="@+id/co_signin_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|right"
-                android:text="@string/signin_title"
-                android:visibility="gone"
-                android:layout_marginRight="10dp"/>
-            <!-- Cart icon with badge -->
-            <com.staples.mobile.cfa.widget.BadgeImageView
-                android:id="@+id/action_show_cart"
-                android:layout_width="@dimen/icon_width"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|right"
-                android:text=""
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                android:layout_marginRight="6dp"
-                android:src="@drawable/cart"/>
-        </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <LinearLayout
+                  android:id="@+id/action_bar"
+                  android:layout_width="match_parent"
+                  android:layout_height="56dp"
+                  android:orientation="horizontal"
+                  android:animateLayoutChanges="true"
+                  android:background="@color/staples_light">
+                <!-- close button (only visible when checkout displayed)-->
+                <TextView
+                    android:id="@+id/close_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:gravity="center_vertical|left"
+                    android:textSize="24sp"
+                    android:fontFamily="sans-serif"
+                    android:clickable="true"
+                    android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/action_left_drawer"
+                    android:layout_width="48dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:src="@drawable/ic_drawer"/>
+                <TextView
+                    android:id="@+id/header"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:gravity="center_vertical|left"
+                    android:textSize="24sp"
+                    android:text="@string/staples"/>
+                <!-- Search Bar -->
+                <com.staples.mobile.cfa.search.SearchBarView
+                    android:id="@+id/search_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxWidth="200dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:visibility="gone"
+                    android:inputType="textAutoComplete|textAutoCorrect"
+                    android:imeOptions="actionSearch|flagNoExtractUi"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:singleLine="true"
+                    android:hint="@string/original_hint"
+                    android:textSize="16sp"/>
+                <ImageView
+                    android:id="@+id/search_icon"
+                    android:layout_width="@dimen/icon_width"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|right"
+                    android:src="@drawable/ic_search"/>
+                <!--cart item qty (only visible when cart displayed)-->
+                <TextView
+                    android:id="@+id/cart_item_qty"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:gravity="center_vertical|right"
+                    android:layout_marginRight="6dp"
+                    android:textSize="20sp"
+                    android:visibility="gone"/>
+                <!--checkout sign-in button (only visible when guest checkout displayed)-->
+                <Button
+                    android:id="@+id/co_signin_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|right"
+                    android:text="@string/signin_title"
+                    android:visibility="gone"
+                    android:layout_marginRight="10dp"/>
+                <!-- Cart icon with badge -->
+                <com.staples.mobile.cfa.widget.BadgeImageView
+                    android:id="@+id/action_show_cart"
+                    android:layout_width="@dimen/icon_width"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|right"
+                    android:text=""
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:layout_marginRight="6dp"
+                    android:src="@drawable/cart"/>
+            </LinearLayout>
+
+
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
@@ -154,5 +162,6 @@
                     android:text="@string/empty"/>
             </com.staples.mobile.cfa.widget.DataWrapper>
         </android.support.v4.widget.DrawerLayout>
+        </FrameLayout>
     </LinearLayout>
 </FrameLayout>
