--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -2,7 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <!-- Splash screen -->
     <ImageView
         android:id="@+id/splash"
@@ -12,156 +11,187 @@
         android:padding="12dp"
         android:src="@drawable/splash"
         android:background="#ffffff"/>
-
     <!-- Main screen -->
-    <LinearLayout
+    <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="invisible"
         android:background="#ffffff">
-        <!-- ActionBar -->
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <LinearLayout
-                  android:id="@+id/action_bar"
-                  android:layout_width="match_parent"
-                  android:layout_height="56dp"
-                  android:orientation="horizontal"
-                  android:animateLayoutChanges="true"
-                  android:background="@color/staples_light">
-                <!-- close button (only visible when checkout displayed)-->
-                <TextView
-                    android:id="@+id/close_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:gravity="center_vertical|left"
-                    android:textSize="24sp"
-                    android:fontFamily="sans-serif"
-                    android:clickable="true"
-                    android:visibility="gone"/>
-                <ImageView
-                    android:id="@+id/action_left_drawer"
-                    android:layout_width="48dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|left"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:src="@drawable/ic_drawer"/>
-                <TextView
-                    android:id="@+id/header"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:gravity="center_vertical|left"
-                    android:textSize="24sp"
-                    android:text="@string/staples"/>
-                <!-- Search Bar -->
-                <com.staples.mobile.cfa.search.SearchBarView
-                    android:id="@+id/search_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:maxWidth="200dp"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:layout_gravity="center_vertical|right"
-                    android:visibility="gone"
-                    android:inputType="textAutoComplete|textAutoCorrect"
-                    android:imeOptions="actionSearch|flagNoExtractUi"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:singleLine="true"
-                    android:hint="@string/original_hint"
-                    android:textSize="16sp"/>
-                <ImageView
-                    android:id="@+id/search_icon"
-                    android:layout_width="@dimen/icon_width"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|right"
-                    android:src="@drawable/ic_search"/>
-                <!--cart item qty (only visible when cart displayed)-->
-                <TextView
-                    android:id="@+id/cart_item_qty"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:gravity="center_vertical|right"
-                    android:layout_marginRight="6dp"
-                    android:textSize="20sp"
-                    android:visibility="gone"/>
-                <!--checkout sign-in button (only visible when guest checkout displayed)-->
-                <Button
-                    android:id="@+id/co_signin_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical|right"
-                    android:text="@string/signin_title"
-                    android:visibility="gone"
-                    android:layout_marginRight="10dp"/>
-                <!-- Cart icon with badge -->
-                <com.staples.mobile.cfa.widget.BadgeImageView
-                    android:id="@+id/action_show_cart"
-                    android:layout_width="@dimen/icon_width"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|right"
-                    android:text=""
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    android:layout_marginRight="6dp"
-                    android:src="@drawable/cart"/>
-            </LinearLayout>
 
-
-        <android.support.v4.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <!-- Main content -->
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+            <!-- Fragment Contain -->
             <FrameLayout
-                android:id="@+id/content"
+                android:id="@+id/contain_frame"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-            <!-- Left drawer (menu) -->
-            <com.staples.mobile.cfa.widget.DataWrapper
-                android:id="@+id/left_drawer"
-                android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:orientation="vertical"
-                android:background="#ffffff">
-                <ListView
-                    android:id="@+id/menu"
+                android:paddingTop="56dp">
+                <android.support.v4.widget.DrawerLayout
+                    android:id="@+id/drawer_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:choiceMode="singleChoice"/>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="top">
+                    <!-- Main content -->
+                    <FrameLayout
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <!-- Left drawer (menu) -->
+                    <com.staples.mobile.cfa.widget.DataWrapper
+                        android:id="@+id/left_drawer"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:orientation="vertical"
+                        android:background="#ffffff">
+                        <ListView
+                            android:id="@+id/menu"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:choiceMode="singleChoice"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:gravity="center">
+                            <ProgressBar
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:textSize="20sp"
+                            android:text="@string/empty"/>
+                    </com.staples.mobile.cfa.widget.DataWrapper>
+                </android.support.v4.widget.DrawerLayout>
+            </FrameLayout>
+
+            <!-- ActionBar -->
+            <FrameLayout
+                android:id="@+id/action_bar_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
                 <LinearLayout
+                    android:id="@+id/action_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center">
-                    <ProgressBar
+                    android:layout_height="56dp"
+                    android:orientation="horizontal"
+                    android:animateLayoutChanges="true"
+                    android:background="@color/staples_light">
+                    <!-- close button (only visible when checkout displayed)-->
+                    <TextView
+                        android:id="@+id/close_button"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="match_parent"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:gravity="center_vertical|left"
+                        android:textSize="24sp"
+                        android:fontFamily="sans-serif"
+                        android:text="x"
+                        android:clickable="true"
+                        android:visibility="gone"/>
+                    <ImageView
+                        android:id="@+id/action_left_drawer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="16dp"
+                        android:src="@drawable/ic_menu_white"/>
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:gravity="center_vertical|left"
+                        android:textSize="24sp"
+                        android:textColor="@android:color/white"
+                        android:text="@string/staples"/>
+                    <!-- Search Bar -->
+                    <com.staples.mobile.cfa.search.SearchBarView
+                        android:id="@+id/search_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:maxWidth="200dp"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:visibility="gone"
+                        android:inputType="textAutoComplete|textAutoCorrect"
+                        android:imeOptions="actionSearch|flagNoExtractUi"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:singleLine="true"
+                        android:hint="@string/original_hint"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/white"/>
+                    <ImageView
+                        android:id="@+id/option_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_search_white"/>
+                    <!--cart item qty (only visible when cart displayed)-->
+                    <TextView
+                        android:id="@+id/cart_item_qty"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:gravity="center_vertical|right"
+                        android:layout_marginRight="6dp"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/white"
+                        android:visibility="gone"/>
+                    <!--checkout sign-in button (only visible when guest checkout displayed)-->
+                    <Button
+                        android:id="@+id/co_signin_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="@string/signin_title"
+                        android:visibility="gone"
+                        android:layout_marginRight="10dp"/>
+                    <!-- Cart icon with badge -->
+                    <com.staples.mobile.cfa.widget.BadgeImageView
+                        android:id="@+id/action_show_cart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="6dp"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:src="@drawable/ic_shopping_cart_white"/>
                 </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:text="@string/empty"/>
-            </com.staples.mobile.cfa.widget.DataWrapper>
-        </android.support.v4.widget.DrawerLayout>
-        </FrameLayout>
-    </LinearLayout>
+            </FrameLayout>
+        </RelativeLayout>
+
+    </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+
+    <RelativeLayout
+        android:id="@+id/progress_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:clickable="false"
+        android:background="#6f000022" >
+        <ProgressBar
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateOnly="true" />
+    </RelativeLayout>
 </FrameLayout>
