--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -103,49 +103,50 @@
             android:layout_weight="1"
             android:background="@color/background_extra_light_gray"
             android:visibility="gone"/>
+        <!--NOTE: we may or may not implement the link-rewards-acct feature-->
         <!--link rewards account -->
-        <LinearLayout
-            android:id="@+id/link_rewards_acct_layout"
-            style="@style/DrawerStyle"
-            android:layout_width="match_parent"
-            android:background="@color/background_extra_light_gray"
-            android:visibility="gone">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/link_rewards_account"
-                />
-            <EditText
-                android:id="@+id/rewards_card_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/rewards_card_number"
-                android:inputType="number"
-                android:imeOptions="actionDone"
-                android:maxLength="10"/>
-            <EditText
-                android:id="@+id/rewards_phone_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/rewards_phone_number"
-                android:inputType="phone"
-                android:imeOptions="actionDone"
-                android:maxLength="15"/>
-            <Button
-                android:id="@+id/rewards_link_acct_button"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center_vertical"
-                android:text="@string/link_account"
-                android:textSize="14dp"
-                android:fontFamily="sans-serif"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:id="@+id/link_rewards_acct_layout"-->
+            <!--style="@style/DrawerStyle"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:background="@color/background_extra_light_gray"-->
+            <!--android:visibility="gone">-->
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/link_rewards_account"-->
+                <!--/>-->
+            <!--<EditText-->
+                <!--android:id="@+id/rewards_card_number"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:hint="@string/rewards_card_number"-->
+                <!--android:inputType="number"-->
+                <!--android:imeOptions="actionDone"-->
+                <!--android:maxLength="10"/>-->
+            <!--<EditText-->
+                <!--android:id="@+id/rewards_phone_number"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:hint="@string/rewards_phone_number"-->
+                <!--android:inputType="phone"-->
+                <!--android:imeOptions="actionDone"-->
+                <!--android:maxLength="15"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/rewards_link_acct_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="35dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:text="@string/link_account"-->
+                <!--android:textSize="14dp"-->
+                <!--android:fontFamily="sans-serif"-->
+                <!--android:paddingTop="4dp"-->
+                <!--android:paddingBottom="4dp"-->
+                <!--android:paddingLeft="8dp"-->
+                <!--android:paddingRight="8dp"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
         <!-- listview of existing rewards -->
         <ListView
             android:id="@+id/rewards_list"
