--- a/app/src/main/res/layout/coupon_item.xml
+++ b/app/src/main/res/layout/coupon_item.xml
@@ -16,13 +16,13 @@
         android:layout_gravity="bottom"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/coupon_item_description"
+            android:id="@+id/coupon_item_field1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="100dp"
             />
         <TextView
-            android:id="@+id/coupon_item_code"
+            android:id="@+id/coupon_item_field2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
