--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="android:background">#ffff00</item>
     </style>
 
-    <style name="CheckoutSubheading">
+    <style name="GraySubheading">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
