--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:padding="10dp"
-                    android:text="Cart Items On Clearance"/>
+                    android:text="@string/feed_clearance_title"/>
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:padding="10dp"
-                    android:text="Cart Items On Daily Deal"/>
+                    android:text="@string/feed_daily_deal_title"/>
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
@@ -152,20 +152,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:padding="10dp"
-                    android:text="Your Recently Viewed Items"/>
+                    android:text="@string/feed_seen_products_title"/>
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="2dp"
                     android:background="@color/background_light_gray"/>
-                <TextView
-                    android:id="@+id/seen_products_empty"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:text="@string/empty"
-                    android:visibility="gone"
-                    android:padding="5dp"/>
                 <com.staples.mobile.cfa.widget.DataWrapper
                     android:id="@+id/seen_products_wrapper"
                     android:layout_width="match_parent"
