New BrowseFragment, remove BaseFragment, use onResume for ActionBar, rename QuantityEditor

--- a/app/src/main/res/layout/browse_frame.xml
+++ b/app/src/main/res/layout/browse_frame.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <GridView
+    <ListView
         android:id="@+id/products"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:horizontalSpacing="3dp"
         android:verticalSpacing="3dp"
-        android:choiceMode="singleChoice"/>
+        android:choiceMode="singleChoice"
+        android:background="#ffffffff"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
