--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -126,35 +126,14 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
             <!-- Left drawer (menu) -->
-            <com.staples.mobile.cfa.widget.DataWrapper
+            <ListView
                 android:id="@+id/left_drawer"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 android:orientation="vertical"
-                android:background="#ffffff">
-                <ListView
-                    android:id="@+id/menu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:choiceMode="singleChoice"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center">
-                    <ProgressBar
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:text="@string/empty"/>
-            </com.staples.mobile.cfa.widget.DataWrapper>
+                android:background="#ffffff"
+                android:choiceMode="singleChoice"/>
         </android.support.v4.widget.DrawerLayout>
     </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
 
