--- a/app/src/main/res/layout/coupon_item_applied.xml
+++ b/app/src/main/res/layout/coupon_item_applied.xml
@@ -9,11 +9,12 @@
     android:background="@color/background_extra_light_gray"
     android:padding="6dp">
 
+    <!--text fields-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_gravity="bottom"
+        android:layout_centerVertical="true"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/coupon_item_field1"
@@ -28,7 +29,7 @@
             />
     </LinearLayout>
 
-
+    <!--delete button-->
     <Button
         android:id="@+id/coupon_delete_button"
         android:layout_width="34dp"
