--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -26,16 +26,14 @@
               android:animateLayoutChanges="true"
               android:background="@color/staples_light">
             <!-- close button (only visible when checkout displayed)-->
-            <TextView
+            <ImageView
                 android:id="@+id/close_button"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:gravity="center_vertical|left"
-                android:textSize="24sp"
-                android:fontFamily="sans-serif"
-                android:text="x"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:src="@drawable/ic_close_white"
                 android:clickable="true"
                 android:visibility="gone"/>
             <ImageView
