--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,16 @@
         <item name="android:textColor">@color/text_black</item>
     </style>
 
+    <style name="BrowseStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:paddingRight">6dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff00</item>
     </style>
