--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true">
 
     <!-- Summary page contents -->
-    <com.staples.mobile.cfa.sku.AnimatedBarScrollView
+    <ScrollView
         android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -144,7 +144,7 @@
             </LinearLayout>
 
         </LinearLayout>
-    </com.staples.mobile.cfa.sku.AnimatedBarScrollView>
+    </ScrollView>
 
     <!-- Summary page progress whirly -->
     <LinearLayout
