--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -4,14 +4,11 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
     <TabHost
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,18 +55,4 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-    </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/login_progress_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:clickable="false"
-        android:background="#6f000022" >
-        <ProgressBar
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateOnly="true" />
-    </RelativeLayout>
-</FrameLayout>
+</LinearLayout>
