--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -4,16 +4,15 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="TBD"/>
+        android:text="TBD ink"/>
 
-</RelativeLayout>
+</LinearLayout>
