--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/login_fragment_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/login_fragment">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/login_fragment_content"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
     <TabHost
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,18 +44,4 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-    </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/login_progress_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:clickable="false"
-        android:background="#6f000022" >
-        <ProgressBar
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateOnly="true" />
-    </RelativeLayout>
-</FrameLayout>
+</LinearLayout>
