Fix sign-in button, add map phone/directions, fix open until message

--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -31,6 +31,23 @@
         <TextView
             android:id="@+id/opentime"
             style="@style/StoreItem"
-        android:layout_gravity="right"/>
+            android:layout_gravity="right"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="right">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_phone_black"/>
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_directions_black"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
