--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -9,12 +9,9 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         style="@style/DrawerStyle"/>
-
     <Button
+        android:id="@+id/account_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In"
-        android:id="@+id/account_button"
-        android:onClick="signInBtnClick"/>
-
+        android:text="@string/signin_title"/>
 </LinearLayout>
